stylized header on splash/about page, styling fixes, simpler breadcrumb, darker darkmode, more readable runs in sidebar

--- a/plantit/front_end/src/scss/main.sass
+++ b/plantit/front_end/src/scss/main.sass
@@ -38,7 +38,7 @@ $info: $color-highlight !default
 $warning: #e2e3b0!default
 $danger: $red !default
 $light: $gray-100 !default
-$dark: $gray-800 !default // $color-disabled
+$dark: $gray-900 !default // $color-disabled
 
 // This table defines the theme colors (variant names)
 $theme-colors: () !default
@@ -317,7 +317,7 @@ h5
 
 .card
   margin-bottom: 1px
-  box-shadow: -2px 2px 2px $gray-500
+  box-shadow: -1px 1px 1px $gray-500
 
 // a
 //   color: $dark
